<resources>
    <string name="app_name">PDA</string>
    <string name="login">登 陆</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="user_password_hint">请输入密码</string>

    <string name="select_store">选店</string>
    <string name="store_search_hint">输入关键字筛选信息</string>

    <!-- Strings to login -->
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="scan">扫描</string>
    <string name="action_settings">Settings</string>


    <string name="itemCode">商品编号：</string>
    <string name="supplier">供应商编号：</string>
    <string name="orderNo">入库单号：</string>
    <string name="bind">已绑定</string>
    <string name="bindNot">未绑定</string>

    <!-- Strings to fontAwesome -->
    <string name="heard">&#xf004;</string>
    <string name="userNameIcon">&#xf007;</string>
    <string name="userPasswordIcon">&#xf023;</string>
    <string name="search_icon">&#xf002;</string>
    <string name="item_right">&#xf105;</string>
    <string name="item_loginOut">登出</string>
    <string name="item_checkUpdate">检查更新</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_bind">绑定列表</string>
    <string name="title_activity_inventory">盘库清单</string>
    <string name="title_activity_patrol">巡查清单</string>
    <string name="bind_tabs_binded">已完成</string>
    <string name="bind_tabs_bind">未完成</string>


    <string name="notInv">未盘点</string>
    <string name="notInved">未盘到</string>
    <string name="onceInv">已盘点</string>
    <string name="onLoading">正在加载...</string>
    <string name="notResult">没有找到数据</string>
    <string name="sysQuantity">系统数量:</string>
    <string name="quantity">实际数量:</string>


    <string name="invScanLeft">已盘点</string>
    <string name="patScanLeft">已巡查</string>
    <string name="scanRight">件</string>

    <string name="notPat">未巡查</string>
    <string name="pat">未巡到</string>
    <string name="pated">已巡查</string>
    <string name="notMatch">未匹配</string>

    <string name="bind_tabs_all">全部</string>
    <string name="title_activity_parts_details">配件详情</string>

    <string name="parts_details_itemCode">商品编号：</string>
    <string name="parts_details_itemName"></string>
    <string name="parts_details_batch">批次号：</string>
    <string name="parts_details_priceWithTax">价格：</string>
    <string name="parts_details_warehouse">仓库：</string>
    <string name="parts_details_location">库位：</string>
    <string name="parts_details_warehouseAge">库龄：</string>
    <string name="parts_details_supplierType">供应商类别：</string>
    <string name="parts_details_supplier">供应商名称：</string> 
    <string name="parts_details_productLine1">商品一级类别：</string>
    <string name="parts_details_productLine2">商品二级类别：</string>
    <string name="parts_details_productLine3">商品三级类别：</string>
    <string name="inputCodePower">手输编号</string>
    <string name="lightPower">开灯补光</string>
    <string name="submitInputCode">提交</string>


    <string name="inv_scanning">扫 描</string>
    <string name="inv_submit">提 交</string>

    <!-- toast-->

    <string name="RuntimeException">网络异常,请检查网络连接.</string>
    <string name="IOException">无法连接服务器,请检查网络连接.</string>
    <string name="XmlPullParserException">内部异常,请联系管理员.ERROR:XML</string>
    <string name="NullResultLogin">账号密码错误！</string>
    <string name="NullResult">没有找到数据.！</string>
    <string name="uploadError">上传失败.！</string>
    <string name="uploadSuccess">上传成功.！</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
