<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/nksBackground"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/login_logo"
        android:id="@+id/imageView" />
    <RelativeLayout
        android:id="@+id/loginFrom"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/imageView">

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_style">
            <TextView
                android:id="@+id/userNameLeft"
                android:layout_width="50dp"
                android:gravity="center"
                android:textSize="30dp"
                android:layout_height="match_parent"
                android:text="@string/userNameIcon" />
            <EditText
                android:id="@+id/usernameEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_name_hint"
                android:inputType="textPhonetic"
                android:text=""
                android:textColor="@color/nksTextColor2"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_style"
            android:layout_below="@+id/userName"
            android:layout_marginTop="10dp"
            android:id="@+id/linearLayout">
            <TextView
                android:id="@+id/userPassWordLeft"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/userPasswordIcon"
                android:textSize="30dp"
                android:gravity="center"
                />
            <EditText
                android:id="@+id/userPasswordEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_password_hint"
                android:textColor="@color/nksTextColor2"
                android:text=""
                android:inputType="textPassword"
                android:background="@android:color/transparent"/>
        </LinearLayout>

    </RelativeLayout>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:focusable="false"
        android:background="@drawable/submit_buttons"
        android:layout_below="@+id/loginFrom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
