<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nksBackground"
    tools:context="com.icar.inventory.BindActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/basicColor"
        android:id="@+id/bind_tabs">
        <LinearLayout
            android:id="@+id/bind_tabs_all"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@drawable/bind_tabs_textcolor"
                android:background="@drawable/bind_tabs_background"
                android:text="@string/bind_tabs_all"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bind_tabs_bind"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@drawable/bind_tabs_textcolor"
                android:background="@drawable/bind_tabs_background"
                android:text="@string/bind_tabs_bind"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bind_tabs_binded"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@drawable/bind_tabs_textcolor"
                android:background="@drawable/bind_tabs_background"
                android:text="@string/bind_tabs_binded"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/bind_tabs"
        android:queryHint="@string/store_search_hint"
        android:background="@drawable/bind_search_view"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/search_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/search_icon"
            android:gravity="center"
            android:textColor="@color/nksTextColor2"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:hint="@string/store_search_hint"
            android:textColor="@color/nksTextColor"
            android:textColorHint="@color/nksTextColor2"
            android:background="@drawable/bind_search_view"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:layout_height="50dp" />
    </LinearLayout>


    <!--<com.handmark.pulltorefresh.library.PullToRefreshListView-->
        <!--android:id="@+id/pull_to_refresh_listview"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_width="fill_parent" />-->
    <ListView
        android:id="@+id/bind_grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/nksBackground"
        android:layout_below="@+id/searchView"></ListView>


</RelativeLayout>
